@@ -105,7 +105,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
         testRealm.getClientScopes().add(ClientScopeBuilder.create().name("client-a").protocol("openid-connect").build());
         testRealm.getClientScopes().add(ClientScopeBuilder.create().name("some-optional-scope").protocol("openid-connect").build());
         ClientRepresentation client = KeycloakModelUtils.createClient(testRealm, "client-a");
-        client.setDefaultClientScopes(Collections.singletonList("customer"));
+        client.setDefaultClientScopes(List.of("customer"));
         client.setOptionalClientScopes(Collections.singletonList("some-optional-scope"));
         KeycloakModelUtils.createClient(testRealm, "client-b");
     }
@@ -321,6 +321,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
     public void testValidation() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::failValidationWhenEmptyAttributes);
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testAttributeValidation);
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testEmailAsUsernameValidation);
     }
 
     private static void failValidationWhenEmptyAttributes(KeycloakSession session) {
@@ -398,7 +399,30 @@ public class UserProfileTest extends AbstractUserProfileTest {
         assertFalse(profile.getAttributes().validate(UserModel.EMAIL, (Consumer<ValidationError>) errors::add));
         assertTrue(containsErrorMessage(errors, EmailValidator.MESSAGE_INVALID_EMAIL));
     }
-    
+
+    private static void testEmailAsUsernameValidation(KeycloakSession session) {
+        Map<String, Object> attributes = new HashMap<>();
+        UserProfileProvider provider = session.getProvider(UserProfileProvider.class);
+        provider.setConfiguration(null);
+        UserProfile profile;
+        RealmModel realm = session.getContext().getRealm();
+
+        try {
+            realm.setRegistrationEmailAsUsername(true);
+            attributes.clear();
+            attributes.put(UserModel.FIRST_NAME, "Joe");
+            attributes.put(UserModel.LAST_NAME, "Doe");
+            // valid email but invalid as username
+            attributes.put(UserModel.EMAIL, "foo%bar@example.com");
+            profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
+            profile.validate();
+        } catch (ValidationException ve) {
+            Assert.fail("Should be OK email as username");
+        } finally {
+            realm.setRegistrationEmailAsUsername(false);
+        }
+    }
+
     private static boolean containsErrorMessage(List<ValidationError> errors, String message){
     	for(ValidationError err : errors) {
     		if(err.getMessage().equals(message)) {
@@ -407,7 +431,7 @@ public class UserProfileTest extends AbstractUserProfileTest {
     	}
     	return false;
     }
-    
+
 
     @Test
     public void testValidateComplianceWithUserProfile() {
@@ -516,14 +540,14 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         assertThat(attributes.nameSet(),
                 containsInAnyOrder(UserModel.USERNAME, UserModel.EMAIL, UserModel.FIRST_NAME, UserModel.LAST_NAME, UserModel.LOCALE, "address", "second"));
-        
-        
+
+
         AttributeGroupMetadata companyAddressGroup = attributes.getMetadata("address").getAttributeGroupMetadata();
         assertEquals("companyaddress", companyAddressGroup.getName());
         assertEquals("header", companyAddressGroup.getDisplayHeader());
         assertEquals("description", companyAddressGroup.getDisplayDescription());
         assertNull(companyAddressGroup.getAnnotations());
-        
+
         AttributeGroupMetadata groupwithannoGroup = attributes.getMetadata("second").getAttributeGroupMetadata();
         assertEquals("groupwithanno", groupwithannoGroup.getName());
         assertNull(groupwithannoGroup.getDisplayHeader());
@@ -572,9 +596,9 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributesUpdatedOldValues.put(UserModel.FIRST_NAME, "Joe");
         attributesUpdatedOldValues.put(UserModel.LAST_NAME, "Doe");
         attributesUpdatedOldValues.put(UserModel.EMAIL, "user@keycloak.org");
-        
+
         profile.update((attributeName, userModel, oldValue) -> {
-            assertTrue(attributesUpdated.add(attributeName)); 
+            assertTrue(attributesUpdated.add(attributeName));
             assertEquals(attributesUpdatedOldValues.get(attributeName), getSingleValue(oldValue));
             assertEquals(attributes.get(attributeName), userModel.getFirstAttribute(attributeName));
             });
@@ -593,13 +617,13 @@ public class UserProfileTest extends AbstractUserProfileTest {
 
         assertEquals("fixed-business-address", user.getFirstAttribute("business.address"));
     }
-    
+
     private static String getSingleValue(List<String> vals) {
         if(vals==null || vals.isEmpty())
             return null;
         return vals.get(0);
     }
-    
+
     @Test
     public void testReadonlyUpdates() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testReadonlyUpdates);
@@ -1292,6 +1316,39 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     @Test
+    public void testNullAttributesInConfig() {
+        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testNullAttributesInConfig);
+    }
+
+    private static void testNullAttributesInConfig(KeycloakSession session) {
+        UserProfileProvider provider = getUserProfileProvider(session);
+        UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
+        config.setAttributes(null);
+        config.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ENABLED);
+
+        provider.setConfiguration(config);
+
+        Map<String, Object> attributes = new HashMap<>();
+
+        attributes.put(UserModel.USERNAME, "user");
+        attributes.put(UserModel.FIRST_NAME, "John");
+        attributes.put(UserModel.LAST_NAME, "Doe");
+        attributes.put(UserModel.EMAIL, org.keycloak.models.utils.KeycloakModelUtils.generateId() + "@keycloak.org");
+
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
+
+        profile.validate();
+
+        config.setAttributes(Collections.emptyList());
+        try {
+            provider.setConfiguration(config);
+            Assert.fail("Expected to fail as we are trying to remove required attributes email and username");
+        } catch (ComponentValidationException cve) {
+            //ignore
+        }
+    }
+
+    @Test
     public void testCustomAttributeOptional() {
         getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testCustomAttributeOptional);
     }
@@ -1679,11 +1736,10 @@ public class UserProfileTest extends AbstractUserProfileTest {
     }
 
     @Test
-    public void testRequiredByClientScope() {
-        getTestingClient().server(TEST_REALM_NAME).run((RunOnServer) UserProfileTest::testRequiredByClientScope);
-    }
-
-    private static void testRequiredByClientScope(KeycloakSession session) {
+    @ModelTest
+    public void testRequiredByClientScope(KeycloakSession session) {
+        RealmModel realm = session.realms().getRealmByName("test");
+        session.getContext().setRealm(realm);
         UserProfileProvider provider = getUserProfileProvider(session);
         UPConfig config = UPConfigUtils.parseSystemDefaultConfig();
         config.addOrReplaceAttribute(new UPAttribute(ATT_ADDRESS, new UPAttributePermissions(Set.of(), Set.of(ROLE_USER)), new UPAttributeRequired(Set.of(), Set.of("client-a"))));
@@ -1696,33 +1752,22 @@ public class UserProfileTest extends AbstractUserProfileTest {
         attributes.put(UserModel.LAST_NAME, "Doe");
         attributes.put(UserModel.EMAIL, "user@email.test");
 
-        // client with default scopes for which is attribute NOT configured as required
-        configureAuthenticationSession(session, "client-b", null);
-
-        // no fail on User API nor Account console as they do not have scopes
-        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
-        profile.validate();
-        profile = provider.create(UserProfileContext.ACCOUNT, attributes);
-        profile.validate();
-
-        // no fail on auth flow scopes when scope is not required
-        profile = provider.create(UserProfileContext.REGISTRATION, attributes);
-        profile.validate();
-        profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
-        profile.validate();
-        profile = provider.create(UserProfileContext.IDP_REVIEW, attributes);
-        profile.validate();
-
         // client with default scope for which is attribute configured as required
         configureAuthenticationSession(session, "client-a", null);
 
-        // no fail on User API nor Account console as they do not have scopes
-        profile = provider.create(UserProfileContext.USER_API, attributes);
-        profile.validate();
-        profile = provider.create(UserProfileContext.ACCOUNT, attributes);
+        // no fail on User API because they don't have access to scopes yet
+        UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
         profile.validate();
 
         // fail on auth flow scopes when scope is required
+        try {
+            profile = provider.create(UserProfileContext.ACCOUNT, attributes);
+            profile.validate();
+            fail("Should fail validation");
+        } catch (ValidationException ve) {
+            assertTrue(ve.isAttributeOnError(ATT_ADDRESS));
+        }
+
         try {
             profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
             profile.validate();
@@ -1744,7 +1789,6 @@ public class UserProfileTest extends AbstractUserProfileTest {
         } catch (ValidationException ve) {
             assertTrue(ve.isAttributeOnError(ATT_ADDRESS));
         }
-
     }
 
     @Test
@@ -1768,13 +1812,13 @@ public class UserProfileTest extends AbstractUserProfileTest {
         // client with default scopes. No address scope included
         configureAuthenticationSession(session, "client-a", null);
 
-        // No fail on admin and account console as they do not have scopes
+        // no fail on User API because they don't have access to scopes yet
         UserProfile profile = provider.create(UserProfileContext.USER_API, attributes);
-        profile.validate();
-        profile = provider.create(UserProfileContext.ACCOUNT, attributes);
         profile.validate();
 
         // no fail on auth flow scopes when scope is not required
+        profile = provider.create(UserProfileContext.ACCOUNT, attributes);
+        profile.validate();
         profile = provider.create(UserProfileContext.REGISTRATION, attributes);
         profile.validate();
         profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
@@ -1788,10 +1832,15 @@ public class UserProfileTest extends AbstractUserProfileTest {
         // No fail on admin and account console as they do not have scopes
         profile = provider.create(UserProfileContext.USER_API, attributes);
         profile.validate();
-        profile = provider.create(UserProfileContext.ACCOUNT, attributes);
-        profile.validate();
 
         // fail on auth flow scopes when scope is required
+        try {
+            profile = provider.create(UserProfileContext.ACCOUNT, attributes);
+            profile.validate();
+            fail("Should fail validation");
+        } catch (ValidationException ve) {
+            assertTrue(ve.isAttributeOnError(ATT_ADDRESS));
+        }
         try {
             profile = provider.create(UserProfileContext.UPDATE_PROFILE, attributes);
             profile.validate();
@@ -2214,7 +2263,53 @@ public class UserProfileTest extends AbstractUserProfileTest {
             assertTrue(ve.isAttributeOnError(UserModel.EMAIL));
             assertTrue(ve.hasError(LengthValidator.MESSAGE_INVALID_LENGTH));
         }
-     }
+
+        RealmModel realm = session.getContext().getRealm();
+
+        try {
+            upConfig = UPConfigUtils.parseSystemDefaultConfig();
+            upConfig.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ENABLED);
+            provider.setConfiguration(upConfig);
+            realm.setRegistrationEmailAsUsername(true);
+            attributes.put(UserModel.EMAIL, "new@email.com");
+            profile = provider.create(UserProfileContext.UPDATE_EMAIL, attributes, user);
+            profile.update();
+            assertEquals(attributes.get(UserModel.EMAIL), profile.getAttributes().getFirst(UserModel.EMAIL));
+            assertEquals(attributes.get(UserModel.EMAIL), profile.getAttributes().getFirst(UserModel.USERNAME));
+        } finally {
+            realm.setRegistrationEmailAsUsername(false);
+        }
+
+        try {
+            realm.setEditUsernameAllowed(false);
+            attributes.put(UserModel.EMAIL, "other@email.com");
+            profile = provider.create(UserProfileContext.UPDATE_EMAIL, attributes, user);
+            profile.update();
+            assertEquals(attributes.get(UserModel.EMAIL), profile.getAttributes().getFirst(UserModel.EMAIL));
+            assertEquals("new@email.com", profile.getAttributes().getFirst(UserModel.USERNAME));
+        } catch (ValidationException ve) {
+            assertTrue(ve.isAttributeOnError(UserModel.USERNAME));
+            assertTrue(ve.hasError(Messages.READ_ONLY_USERNAME));
+        } finally {
+            realm.setEditUsernameAllowed(true);
+        }
+
+        try {
+            upConfig = UPConfigUtils.parseSystemDefaultConfig();
+            upConfig.setUnmanagedAttributePolicy(UnmanagedAttributePolicy.ENABLED);
+            provider.setConfiguration(upConfig);
+            realm.setEditUsernameAllowed(false);
+            realm.setRegistrationEmailAsUsername(true);
+            attributes.put(UserModel.EMAIL, "other@email.com");
+            profile = provider.create(UserProfileContext.UPDATE_EMAIL, attributes, user);
+            profile.update();
+            assertEquals(attributes.get(UserModel.EMAIL), profile.getAttributes().getFirst(UserModel.EMAIL));
+            assertEquals(attributes.get(UserModel.EMAIL), profile.getAttributes().getFirst(UserModel.USERNAME));
+        } finally {
+            realm.setEditUsernameAllowed(true);
+            realm.setRegistrationEmailAsUsername(false);
+        }
+    }
 
     @Test
     public void testMultivalued() {
